# AIRefAssist

./: README.md
Codebase/: parsed_files.txt  to_txt.py
Codebase/Refassist Codebase/Refassist/: README.me  pyproject.toml
Codebase/Refassist Codebase/Refassist/cli/: refassist_cli.py
Codebase/Refassist Codebase/Refassist/src/refassist/: __init__.py  config.py  logging.py
Codebase/Refassist Codebase/Refassist/src/refassist/graphs/: __init__.py  pipeline.py
Codebase/Refassist Codebase/Refassist/src/refassist/llms/: __init__.py  adapter.py
Codebase/Refassist Codebase/Refassist/src/refassist/nodes/: Template.docx  __init__.py  apply_corrections.py  build_exports.py  build_report.py  cleanup.py  detect_type.py  enrich_from_best.py  format_reference.py  init_runtime.py  llm_correct.py  llm_format.py  multisource_lookup.py  parse_extract.py  routing.py  select_best.py  validate_reference.py  verify_agents.py  verify_journal_abbrev.py
Codebase/Refassist Codebase/Refassist/src/refassist/state/: __init__.py  models.py
Codebase/Refassist Codebase/Refassist/src/refassist/tools/: __init__.py  http.py  scoring.py  type_reconcile.py  utils.py
Codebase/Refassist Codebase/Refassist/src/refassist/tools/sources/: __init__.py  arxiv.py  crossref.py  ieee.py  ieeexplore.py  openalex.py  pubmed.py  semanticscholar.py
Codebase/Refassist Codebase/Refassist/src/refassist/ui/: __init__.py  mermaid.py
Research Items/: AI-Models-ScholarlyPublishing.xlsx  Comparision_report.docx  QA_0903_2TESTCASES.xlsx  RefAssist-Vs-AIRefAssist.docx  Test_references.docx
(+38 files in other folders)
