[project]
name = "refassist"
version = "0.1.0"
description = "Agentic IEEE Reference Pipeline (LangGraph) — modular, production-ready"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "cachetools>=5.3.3",
  "rapidfuzz>=3.9.7",
  "pydantic>=2.7.3",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
]

[project.optional-dependencies]
openai = ["openai>=1.35.10"]
anthropic = ["anthropic>=0.34.2"]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

[tool.setuptools.packages.find]
where = ["src"]
